# cargo-follow

./: Cargo.toml
src/: main.rs
