[package]
name = "cargo-follow"
version = "0.1.0"
authors = ["Jacob Rosenthal <jacobrosenthal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cargo-lock = "4.0.1"
itertools = "0.9.0"
crates_io_api = "0.6.1"
indicatif = "0.15.0"
